experimental fix for whitespace under footer on chrome

--- a/janiczek.css
+++ b/janiczek.css
@@ -23,7 +23,6 @@ body {
     font-weight: 300;
     font-size: 100%;
     color: #35373c;
-    overflow: hidden;
 }
 .grad {
     color: #40c48f;
